manifest/objects/DMMAX__Log__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Insight__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Insight</label>
        <referenceTo>DMMAX__Insight__c</referenceTo>
        <relationshipLabel>Max Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Max Logs</relationshipLabel>
        <relationshipName>Max_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__Record__c</fullName>
        <label>Record</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Subcategory__c</fullName>
        <label>Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Max Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>